# Exact-Root-Parity-CCD

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: main.cpp
cmake/: CCDDependencies.cmake  CCDDownloadExternal.cmake  CCDUtils.cmake  geogram.cmake
cmake/ccd/: ccd_utils.cmake  ccd_warnings.cmake
comparisons/ccd/: comparison.cpp  comparison.hpp
data/: example-collisions.csv  false-pos-VF-data.csv  result1.csv  result_all.csv
doubleccd/: CMakeLists.txt  Rational.hpp  double_Utils.cpp  double_Utils.hpp  double_ray_parity.cpp  double_ray_parity.h  double_subfunctions.cpp  double_subfunctions.h  doubleccd.cpp  doubleccd.hpp  exact_subtraction.hpp  hack.h  rayPlaneIntersection.cpp  rayPlaneIntersection.h
interval_ccd/: CMakeLists.txt  Rational.hpp  avx.cpp  avx.h  interval.hpp  interval_ccd.cpp  interval_ccd.hpp  interval_root_finder.cpp  interval_root_finder.hpp
interval_ccd/0804_new_opti/: avx.cpp  avx.h  interval.hpp  interval_ccd.cpp  interval_ccd.hpp  interval_root_finder.cpp  readme.txt
src/: AABB.cpp  AABB.h  CCD.cpp  CMakeLists.txt  Rational.hpp  SOURCE.cmake  Utils.cpp  Utils.hpp  ccd.cpp  ccd.hpp  exact_subtraction.hpp  main.cpp  ray_parity.cpp  ray_parity.h  read_collision_data.cpp  read_collision_data.hpp  subfunctions.cpp  subfunctions.h
tests/: CMakeLists.txt  main.cpp  test_ccd.cpp
tests/comparisons/: test_ccd.cpp
